--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
